Fixing white space bug
Fixes annoying white space bug

--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,13 @@ html, body{
   background-image: linear-gradient(to right top, #7d277d, #b12367, #cf3f49, #d66a27, #c79600);
   min-height:100%;
   scroll-behavior: smooth;
-  overflow:   scroll;
 }
 
 ::-webkit-scrollbar {
     width: 0px;
     background: transparent; /* Makes the scrollbar transparent */
 }
+
 body {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
